# cli

./: .gitignore  AGENTS.md  Jenkinsfile  README.md  pull_request_template.md
platform-cli/: 00_GHDP_CLI_COMMANDS_REFERENCE.toml  ADMIN_NONADMIN_PHASE0_BLUEPRINT.md  AGENTS.md  AGENT_ORCHESTRATION_JOURNEY.md  ARCHITECTURE.md  EPPE-7205_INSTALL_SYNC_RECONCILIATION_BLUEPRINT.md  EPPE-7317_SYNCED_TEAM_TOOLSET_BLUEPRINT.md  EPPE-7395_TOOLS_INSTALL_AND_CLAUDE_BLUEPRINT.md  INTERNAL_BINARY_INSTALL_GUIDE.md  MANIFEST.in  README.md  SCHEDULER_CAPABILITY_BLUEPRINT.md  ghdp.spec  install_ghdp.ps1  install_ghdp.sh  install_ghdp_local_binary.ps1  install_ghdp_local_binary.sh  pyproject.toml  setup.py  tf_local_smoke_test.ps1
platform-cli/Formula/: ghdp.rb
platform-cli/docs/: NON_TECH_MANAGED_INSTALL_GUIDE.md  claude-tools-install-data-ops-runbook.md  claude-tools-install-reference.md  claude-tools-install-troubleshooting.md  eppe-7017-sync-based-blueprint.md
platform-cli/packaging/: ghdp_launcher.py
platform-cli/scripts/: build_claude_athena_workgroup_release_assets.py  build_content_index_release_asset.py  build_repo_ready_release_assets.py  build_team_toolset_release_assets.py
platform-cli/tests/: conftest.py  orchestrate_stage_seed.py  scheduler_ci_smoke.py  test_access_phase0.py  test_access_session_state.py  test_admin_phase0_commands.py  test_ai_provider.py  test_aws_profile.py  test_branch_ai.py  test_claude_athena_workgroup_assets.py  test_claude_auth.py  test_claude_command.py  test_claude_config_command.py  test_codex_skill_sync.py  test_command_runtime_gates.py  (+69 more)
(+411 files in other folders)
